tests/baselines/reference/inferSetterParamType.errors.txt
==== tests/cases/compiler/inferSetterParamType.ts (5 errors) ====
    class Foo {
    
        get bar() {
            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 0;
        }
        set bar(n) { // should not be an error - infer number
            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        }
    }
    
    class Foo2 {
    
        get bar() {
            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 0; // should be an error - can't coerce infered return type to match setter annotated type
                   ~
!!! error TS2323: Type 'number' is not assignable to type 'string'.
        }
        set bar(n:string) {
            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        }
    }
    